@@ -101,6 +101,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #14195: An issue that caused weakref.WeakSet instances to incorrectly
+  return True for a WeakSet instance 'a' in both 'a < a' and 'a > a' has been
+  fixed.
+
 - Issue #14159: Fix the len() of weak sets to return a better approximation
   when some objects are dead or dying.  Moreover, the implementation is now
   O(1) rather than O(n).
